Monthday, Month DD, YYYY:
  Summary for 1.11.0 libpcap release (so far!)
    Link-layer types:
      Add LINKTYPE_ETW/DLT_ETW.
      Add LINKTYPE_NETANALYZER_NG/DLT_NETANALYZER_NG (pull request
        #1008).
      Add LINKTYPE_ZBOSS_NCP/DLT_ZBOSS_NCP.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
    Savefiles:
      Reject pcap files where one of the reserved fields in the
        "link-layer type plus other stuff" is non-zero.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
    Documentation:
      Improve some protocol details in pcap-filter(7).

Monthday, Month DD, YYYY:
  Summary for 1.10.2 libpcap release (so far!)
    Source code:
      Use __builtin_unreachable() in PCAP_UNREACHABLE.
      Use AS_HELP_STRING macro instead of AC_HELP_STRING in the
        configure scripts, to avoid deprecation warnings.
      Change availability tags in pcap.h to make it easier to
        arrange for it to be used in Darwin releases.
      Use AS_HELP_STRING for --enable-remote.
      Fix some formatting string issues found by cppcheck.
      Squelch some CMake warnings.
      Various small code and comment cleanups.
      Fix diag-control.h to handle compiling with clang-cl.
    Savefiles:
      Fix pcap_dispatch() to return number of packets processed, rather
        than 0, even at EOF.
      If we get an error writing the packet header, don't write the
        packet data.
      Put PFLOG UID and PID values in the header into host byte order
        when reading a LINKTYPE_PFLOG file.
      Put CAN ID field in CAN pseudo-headers for LINUX_SLL2, as we do
        for LINUX_SLL.
    Capture:
      Never process more than INT_MAX packets in a pcap_dispatch() call,
        to avoid integer overflow (issue #1087).
      Improve error messages for "no such device" and "permission
        denied" errors.
    Packet filtering: