@@ -8,6 +8,7 @@ Monthday, Month DD, YYYY:
     Packet filtering:
       Add support for Block Ack Req and Block Ack frame types (pull
         request #1039).
+      Expand abbreviations into "proto X" properly.
     Savefiles:
       Reject pcap files where one of the reserved fields in the
         "link-layer type plus other stuff" is non-zero.
